--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Intellipaat EC2 </title>
+        <title>Intellipaat AWS Devops Course </title>
         <style>
             * {
 box-sizing: border-box;
